--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="bloque1">Soy de bloque
+  <div id="bloque1">Soy de bloque cambio
     <span>Soy elemento de linea 1</span>
   </div>
 
